Filter duplicates by replacing previous entry with latest. Update FAQ text when week is no longer editable, make submit button invisible and update header text

--- a/schedule/main.css
+++ b/schedule/main.css
@@ -96,3 +96,7 @@ h3 {
   #accordion { 
     padding: 5px;
 }
+
+.isDisabled {
+  visibility:collapse;
+}
